# 2048

./: .gitignore  Cargo.toml
src/: board.rs
